# jungle-bell

./: .gitignore  GUIDE.md  LICENSE  POSTHOG.md  QA_CHECKLIST_v0.2.0.md  README.md
.cargo/: exmaple_config.toml
.claude/commands/: bump-version.md  release.md  webcrack-snapshot.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/commit-style/: SKILL.md
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: release.yml
campus/webcrack/changes/: 2026-04-02T14-28-15.json
docs/: README.md  SECURITY.md  architecture.md  data-flow.md  development.md  install-one-liner.md  overview.md  poster.html  state-machine.md
etc/: log-2026-03-09.md
install/: jungle-bell.ps1.tmpl  jungle-bell.sh.tmpl  release-install-help.md
jungle-campus-analyzer/: .gitignore  CHECKLIST.md  README.md  analyze.mjs  package-lock.json  package.json
jungle-campus-analyzer/lib/: assert.mjs  collector.mjs  debundler.mjs  differ.mjs  extractor.mjs  snapshotter.mjs  unminifier.mjs  utils.mjs
jungle-campus-analyzer/scripts/: patch-prettier.mjs
my-notes/: Tauri-Intro.md
src/: checker.js  index.html  onboarding.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: checker.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  attendance_day.rs  autostart.rs  checker.rs  commands.rs  config.rs  dday.rs  lib.rs  main.rs  scheduler.rs  state.rs  tray.rs  updater.rs
src-tauri/src/tests/: checker_tests.rs  scheduler_tests.rs
