[package]
name = "jungle-bell"
version = "0.0.2"
description = "Krafton Jungle attendance check reminder"
authors = ["you"]
edition = "2021"

[lib]
name = "jungle_bell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "sync"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
